--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/dbteste?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=cauidavis
-spring.jpa.open-in-view=true
-spring.jpa.hibernate.ddl-auto=update
-
+spring.datasource.url=${JDBC_DATASOURCE_URL}
+spring.jpa.show.sql=true
+spring.jpa.generate.ddl=true
