--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,1 @@
-spring.datasource.url=${JDBC_DATASOURCE_URL}
-spring.jpa.show.sql=true
-spring.jpa.generate.ddl=true
+ java -Dserver.port=$PORT $JAVA_OPTS -jar target/demo-0.0.1-SNAPSHOT.jar
